cut off dialog buttons in responsive display, fixes #463

--- a/resources/assets/stylesheets/less/dialog.less
+++ b/resources/assets/stylesheets/less/dialog.less
@@ -292,6 +292,8 @@
             .ui-button {
                 flex: 1;
                 margin: @gap 0 0 @gap;
+                overflow-x: hidden;
+                text-overflow: ellipsis;
             }
         }
     }
